# aiohttp-vs-fastapi

./: main.py  pyproject.toml
aiohttp_vs_fastapi/aiohttp/: simple_response.py
aiohttp_vs_fastapi/fastapi/: simple_response.py
tests/: test_aiohttp_vs_fastapi.py
