[tool.poetry]
name = "aiohttp-vs-fastapi"
version = "0.1.0"
description = ""
authors = ["Alexander Kapustin <dyens@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
click = "^8.1.3"
fastapi = "^0.82.0"
uvicorn = {extras = ["standart"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
